--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,3 +8,9 @@
 <link rel="stylesheet" href="{{ stylesheet | relative_url }}">
 {% endfor %}
 {% endif %}
+
+{% if page.page_js %}
+{% for script in page.page_js %}
+<script src="{{ script | relative_url }}"></script>
+{% endfor %}
+{% endif %}
