--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,13 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FJYNWF274X"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-FJYNWF274X');
+</script>
+
 <meta charset="utf-8">
 
 {% include seo.html %}
